--- a/css/shoppanel.css
+++ b/css/shoppanel.css
@@ -57,3 +57,11 @@
 [data-edit] {
     white-space: break-spaces;
 }
+
+.shoppanel-box .btn-group .btn:nth-of-type(2) {
+    border-top-right-radius: .25rem;
+    border-bottom-right-radius: .25rem;
+}
+.shoppanel-box .btn-group .btn:nth-of-type(3) {
+    border-radius: .25rem;
+}
