--- a/css/shoppanel.css
+++ b/css/shoppanel.css
@@ -2,7 +2,8 @@
 .shoppanel-input textarea {
     background-color: transparent;
     border: 0 none;
-    box-shadow: 0 0 2px #17a2b8;
+    /*box-shadow: 0 0 2px #17a2b8;*/
+    outline: 1px dashed;
     padding: 0 5px;
     width: 100%;
 
@@ -56,8 +57,16 @@
 
 [data-edit] {
     white-space: break-spaces;
+    cursor: pointer;
+}
+[data-edit="txt"]:hover {
+    outline: 1px dashed;
+}
+[data-edit="txt"]:hover .shoppanel-input textarea {
+    outline: 0 none;
 }
 
+/*
 .shoppanel-box .btn-group .btn:nth-of-type(2) {
     border-top-right-radius: .25rem;
     border-bottom-right-radius: .25rem;
@@ -65,6 +74,7 @@
 .shoppanel-box .btn-group .btn:nth-of-type(3) {
     border-radius: .25rem;
 }
+*/
 
 .shoppanel-imgedit::after {
     content: "\f085"; /* \f044 */
